resources/assets/sass/_custom.scss
/* ... */
.bag-plus-minus i {
  font-style: normal !important;
}

.store-logo {
  //width: 140px !important;
  width: auto;
  height: 100px !important;
}

.nf-vitamin-column:first-child {
  display: none !important;
}

.input-date {
  margin-left: auto !important;
  margin-right: auto !important;
}

/*Vue Tables 2*/

tr {
  line-height: 38px;
}

th:first-child {
  border-top-left-radius: 7px;
}

th:last-child {
  border-top-right-radius: 7px;
}

.table-striped > tbody > tr:nth-child(2n + 1) > td,
.table-striped > tbody > tr:nth-child(2n + 1) > th {
  background-color: #f9f9f9;
}

th {
  font-family: "gotham", sans-serif;
  font-size: 14px;
  font-weight: 600;
}

/*Helper*/

.link-remove {
  color: #000000;
  text-decoration: none !important;
}

.center-text {
  text-align: center;
}

.center {
  display: block;
  margin: 0 auto;
}

.sidebar .nav-link {
  &.router-link-exact-active {
    color: #fff;
    background: #384550;

    .nav-icon {
      color: #3082cf;
    }
  }
}

.header-fixed {
  .app-header {
    z-index: 10010;

    .navbar {
    }
  }
}

.navbar .nav-item:not(.dropdown) {
  padding-left: 0;
  padding-right: 0;

  .nav-link {
    position: relative;
    transition: all 0.3s ease-in-out 0s;
    padding: 15px 1rem;
    color: #73818f;

    &:after {
      content: "";
      position: absolute;
      height: 1px;
      bottom: -1px;
      left: 0;
      right: 0;
      //background-color: #888888;
      -webkit-box-shadow: 0px -1px 2px 0px #7cc039;
      box-shadow: 0px -1px 2px 0px #7cc039;
      visibility: hidden;
      -webkit-transform: scaleX(0);
      transform: scaleX(0);
      -webkit-transition: all 0.22s ease-in-out 0s;
      transition: all 0.22s ease-in-out 0s;
      //opacity: 0.4;
    }

    &:hover {
      color: #fff;

      &:after {
        visibility: visible;
        -webkit-transform: scaleX(1);
        transform: scaleX(1);
      }
    }

    &.active {
      font-weight: 900;
    }

    @include media-breakpoint-up(lg) {
      color: #fff;
    }
  }
}

.navbar .nav-item.dropdown {
  .nav-link {
    @include media-breakpoint-down(md) {
      &,
      div {
        color: #73818f;

        &:hover {
          color: #fff;
        }
      }
    }
  }
}

.dropdown-menu-right .dropdown-item {
  color: #73818f !important;
}

ol.plain {
  list-style: decimal;
  padding-inline-start: 10px;

  li {
    list-style: decimal;
    padding-left: 10px;
  }
}

.strong {
  font-weight: bold;
}

.StripeElement {
  background-color: white;
  height: 40px;
  padding: 10px 12px;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 1px 3px 0 #e6ebf1;
  -webkit-transition: box-shadow 150ms ease;
  transition: box-shadow 150ms ease;
}

.StripeElement--focus {
  box-shadow: 0 1px 3px 0 #cfd7df;
}

.StripeElement--invalid {
  border-color: #fa755a;
}

.StripeElement--webkit-autofill {
  background-color: #fefde5 !important;
}

.red {
  color: #ff0000 !important;
}

.auth-box {
  padding-top: 10% !important;
}

.btn-warning {
  color: #ffffff !important;
  background-color: #ffb007 !important;
}

.featured {
  font-size: 18px !important;
}

.orange {
  background-color: #f25727 !important;
  color: #ffffff !important;
}

.green {
  background-color: #79c036 !important;
  color: #ffffff !important;
}

.d-flex > *,
.d-inline-flex > * {
  &.flex-shrink-1 {
    flex-shrink: 1 !important;
  }
  &.flex-grow-1 {
    flex-grow: 1 !important;
  }
  &.flex-grow-0 {
    flex-grow: 0 !important;
  }
}
.align-right {
  display: flex !important;
  justify-content: flex-end !important;
}

table {
  width: 100%;
}

.modal-content {
  max-height: 80vh !important;
  overflow-y: auto !important;
  -webkit-overflow-scrolling: touch;

  margin-top: 100px !important;
}

.d-none {
  @include media-breakpoint-up(sm) {
    &.d-sm-inline {
      display: inline !important;
    }
  }
}

.sidebar-nav {
  background-color: #434f59 !important;
}

.sidebar-minimizer {
  background-color: #384550 !important;
}

.main,
.main .container-fluid {
  background-color: #efefef !important;
}

.container-fluid {
  background-color: #efefef !important;
}

body.login,
body.register,
body.forgot,
body.reset,
body.forgotresettoken {
  background-image: url("meal-prep-kitchen.jpg");
  background-repeat: no-repeat;
  background-size: cover;

  .main,
  .container-fluid {
    background-color: transparent !important;
  }
}

.navbar-brand-minimized {
  position: relative !important;
  left: 130px !important;
}

.white-text {
  color: #ffffff !important;
}

.storeFilters {
  @include media-breakpoint-down(sm) {
    display: flex;
    flex-wrap: wrap;

    .btn {
      flex-basis: 50%;
      margin-bottom: 0.5rem;
    }
  }

  @include media-breakpoint-down(lg) {
    display: flex;
    flex-wrap: wrap;

    .btn {
      flex-basis: 25%;
      flex-grow: 0;
      margin-bottom: 0.5rem;
    }
  }
}

.modal-title {
  @include media-breakpoint-down(md) {
    font-size: 14px !important;
  }
}

// .modal-meal-image .v-lazy-image {
//   display: none !important;
// }

.VueCarousel-pagination {
  position: relative !important;
  bottom: 80px !important;
}

.modal-meal-package-meals li {
  list-style-type: circle !important;
}

.vw-btn-code,
.vw-btn-image,
.vw-btn-link {
  display: none !important;
}

.standout {
  font-size: 18px !important;
}

.gallery-thumbnail {
  width: 50px !important;
}

.ps__rail-x,
.ps__rail-y {
  opacity: 0.6;
}

.navbar,
.navbar-brand,
.navbar-brand-minimized {
  min-height: 75px !important;
  max-height: 75px !important;
  height: 75px !important;
  line-height: 75px !important;
}

.nav,
.container-fluid {
  padding-top: 20px !important;
}

